--- a/frontend/src/components/Restaurants/restaurant.css
+++ b/frontend/src/components/Restaurants/restaurant.css
@@ -12,3 +12,11 @@
     background-color: white;
     border-radius: 5px;
     }
+
+.restaurantImage{
+
+        height: 200px;
+        width: 300px;
+        border-radius: 5px;
+
+}
