--- a/frontend/src/components/Restaurants/restaurant.css
+++ b/frontend/src/components/Restaurants/restaurant.css
@@ -1,16 +1,13 @@
 .listings {
-    height: fit-content;
-    width: 860px;
-    border: 2px solid #a1a1a1;
-    border-radius: 3px;
     display: flex;
     align-items: center;
-    padding: 20px;
-    position: relative;
-    margin: 0 auto;
-    margin-top: 20px;
-    background-color: white;
-    border-radius: 5px;
+    justify-content: space-between;
+    background-color: transparent;
+    box-shadow: 0 16px 64px -16px rgb(46 55 77 / 10%);
+    border: 4px solid #100c08;
+    margin: 5px 50px;
+    width: 400px;
+    flex-direction: column;
     }
 
 .restaurantImage{
@@ -19,4 +16,9 @@
         width: 300px;
         border-radius: 5px;
 
+}
+
+.restaurantContainer {
+    display: flex;
+    flex-wrap: wrap;
 }
