--- a/frontend/src/components/Restaurants/restaurant.css
+++ b/frontend/src/components/Restaurants/restaurant.css
@@ -2,23 +2,53 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: transparent;
+    background-color: rgba(0,0,0,0.4);
     box-shadow: 0 16px 64px -16px rgb(46 55 77 / 10%);
     border: 4px solid #100c08;
     margin: 5px 50px;
     width: 400px;
     flex-direction: column;
+    color: white
     }
 
-.restaurantImage{
+.listings:hover {
+    /* box-shadow: 7px 7px black; */
+    background-color: rgba(0, 0, 0, 0.6);
 
+}
+
+.restaurantImage{
         height: 200px;
         width: 300px;
         border-radius: 5px;
-
 }
 
 .restaurantContainer {
     display: flex;
     flex-wrap: wrap;
+   background-color: lightgray;
+   padding-bottom: 70px;
+
+}
+
+.cardText {
+    padding-bottom: 6px;
+}
+
+.resName {
+    text-decoration: none;
+    font-size: 24px;
+
+}
+
+
+
+.resAddress, .resCity, .resState {
+    font-size: 20px;
+
+}
+
+.topPage {
+    height: 100px;
+    background-color: lightgray;
 }
