--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,55 +1,86 @@
-
 .leftNav {
-    display: flex;
-    align-items: flex-start;
-    width: 50%;
-    background-color: blue;
-    justify-content: flex-end;
+  display: flex;
+  align-items: flex-start;
+  width: 50%;
+  /* background-color: blue; */
+  justify-content: space-evenly;
 }
 
 .searchBar {
-    display: flex;
-    justify-content: flex-end;
     width: 50%;
-    background-color: pink;
+    height: 28px;
+    padding: 0 12px;
+    background-color: #fafafa;
+    border-radius: 3px;
+    border: solid 1px #dbdbdb;
+    color: #8e8e8e;
+
+  /* background-color: pink; */
+}
+.searchBar:hover,
+.searchBar:focus {
+  border: 1px solid #009688;
+  background-color: white;
 }
 
 .navContainer {
-    display: flex;
-    align-items: center;
-    height: 125px;
-    background-color: black;
-
+  display: flex;
+  align-items: center;
+  height: 80px;
+  background-color: black;
 }
 
 .btn {
-    margin-right: 30px;
-    border-radius: 5px;
+  margin-right: 30px;
+  border-radius: 5px;
 }
 
 .homeBtn {
-    max-height: 40px;
-    border-radius: 4px;
-    font-size: 16px;
-    background: transparent;
-    padding: 0 16px;
-    display: flex;
-    align-items: center;
-    border: 2px solid #fff;
-    color: white;
-    text-decoration: none;
+  max-height: 40px;
+  border-radius: 4px;
+  font-size: 16px;
+  background: transparent;
+  padding: 0 16px;
+  display: flex;
+  align-items: center;
+  border: 2px solid #fff;
+  color: white;
+  text-decoration: none;
 }
 
 .profileBtn {
-    max-height: 40px;
-    border-radius: 4px;
-    font-size: 16px;
-    background: transparent;
-    padding: 0 16px;
+  max-height: 40px;
+  border-radius: 4px;
+  font-size: 16px;
+  background: transparent;
+  padding: 0 16px;
+  display: flex;
+  align-items: center;
+  border: 2px solid #fff;
+  color: white;
+  text-decoration: none;
+}
+
+.searchDiv {
+
     display: flex;
-    align-items: center;
-    border: 2px solid #fff;
-    color: white;
-    text-decoration: none;
+    width: 600px;
+    background-color: white;
 
 }
+
+
+
+/* .results.hidden {
+    position: absolute;
+  background-color: rgb(255, 255, 255);
+  width: 280px;
+  height: 437px;
+  overflow-y: auto;
+  border-radius: 4px;
+  font-size: 14px;
+  border: 0px solid #000;
+  box-shadow: 0px 0px 0px 2px #f0f0f0;
+  overflow-x: hidden;
+  z-index: 999;
+} */
