--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -3,16 +3,19 @@
   align-items: flex-start;
   width: 50%;
   /* background-color: blue; */
-  justify-content: space-evenly;
+  justify-content: flex-end;
 }
 
 .searchBar {
-    width: 50%;
+    width: 416px;
     height: 28px;
     padding: 0 12px;
-    background-color: #fafafa;
+    background-color: lightgray;
     border-radius: 3px;
     border: solid 1px #dbdbdb;
+    text-align: center;
+    font-size: 6mm;
+    font-weight: bold;
     color: #8e8e8e;
 
   /* background-color: pink; */
@@ -27,7 +30,7 @@
   display: flex;
   align-items: center;
   height: 80px;
-  background-color: black;
+  background-color: cornflowerblue;
 }
 
 .btn {
@@ -41,6 +44,7 @@
   font-size: 16px;
   background: transparent;
   padding: 0 16px;
+  margin-right: 100px;
   display: flex;
   align-items: center;
   border: 2px solid #fff;
@@ -49,38 +53,75 @@
 }
 
 .profileBtn {
-  max-height: 40px;
-  border-radius: 4px;
-  font-size: 16px;
-  background: transparent;
-  padding: 0 16px;
-  display: flex;
-  align-items: center;
-  border: 2px solid #fff;
-  color: white;
-  text-decoration: none;
+    max-height: 40px;
+    border-radius: 4px;
+    font-size: 16px;
+    background: transparent;
+    padding: 0 16px;
+    margin-right: 100px;
+    display: flex;
+    align-items: center;
+    border: 2px solid #fff;
+    color: white;
+    text-decoration: none;
 }
 
 .searchDiv {
 
     display: flex;
-    width: 600px;
-    background-color: white;
+    width: 50%;
+    justify-content: flex-end;
 
 }
 
+.hidden {
+    display: none;
+}
 
-
-/* .results.hidden {
+.noResults {
     position: absolute;
-  background-color: rgb(255, 255, 255);
-  width: 280px;
-  height: 437px;
-  overflow-y: auto;
-  border-radius: 4px;
-  font-size: 14px;
-  border: 0px solid #000;
-  box-shadow: 0px 0px 0px 2px #f0f0f0;
-  overflow-x: hidden;
-  z-index: 999;
-} */
+
+}
+
+.results {
+    /* margin-top: px; */
+    color: black;
+    background-color: cornflowerblue;
+    position: absolute;
+    float: left;
+    width: 50vh;
+    font-size: 5mm;
+    text-decoration: none;
+    font-weight: bold;
+    align-items: center;
+    height: 50vh;
+    overflow: scroll;
+    overflow-x: hidden;
+    left: 33.7%;
+}
+
+.results::-webkit-scrollbar {
+    width: 10px;
+
+}
+
+.results::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    box-shadow: inset 0 0 6px lightgray;
+    background-color: lightgray;
+    border: 1px solid cornflowerblue;
+}
+
+.searchCard {
+    background-color: cornflowerblue;
+    border-bottom: 1px solid black;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 5px;
+    height: 30px;
+    align-items: center;
+}
+
+a {
+    color: black;
+}
