--- a/frontend/src/components/Restaurants/singlerestaurant.css
+++ b/frontend/src/components/Restaurants/singlerestaurant.css
@@ -1,6 +1,6 @@
 .SingleCard {
     height: fit-content;
-    width: 860px;
+    width: 450px;
     border: 2px solid #a1a1a1;
     border-radius: 3px;
     display: flex;
@@ -8,9 +8,10 @@
     padding: 20px;
     position: relative;
     margin: 0 auto;
-    margin-top: 20px;
+    margin-top: 5px;
     background-color: white;
     border-radius: 5px;
+    justify-content: center;
 }
 
 .reviewclass {
@@ -26,4 +27,57 @@
     margin-top: 20px;
     background-color: white;
     border-radius: 5px;
+}
+
+.singleRestaurantImage {
+        height: 400px;
+        width: 500px;
+        border-radius: 5px;
+
+}
+
+.restaurantName {
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.topSingle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+body {
+    background-color: lightgray;
+}
+
+.aboveReviews {
+    margin-left: 111vh;
+}
+
+.reviewWrapper {
+    height: fit-content;
+    width: fit-content;
+
+    border: 2px solid #a1a1a1;
+    border-radius: 3px;
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    position: relative;
+    margin: 0 auto;
+    margin-top: 5px;
+    background-color: white;
+    border-radius: 5px;
+    justify-content: center;
+    background-color: lightgray;
+    padding-bottom: 80px;
+    margin-bottom: 80px;
+}
+
+.reviewUl {
+    margin-bottom: 100px;
 }
