--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -90,7 +90,7 @@ video {
     font-size: 100%;
     font: inherit;
     /* will look for parent element for font */
-    font-family: "Inter", serif;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     vertical-align: baseline;
     text-decoration: none;
 }
@@ -129,4 +129,19 @@ q:after {
 table {
     border-collapse: collapse;
     border-spacing: 0;
+}
+
+.buttonClass {
+    background-color:grey;
+    border: 1px solid #000000;
+    border-radius: 15px;
+    color: white;
+    padding: 15px 32px;
+    margin-right: 10px;
+    margin-left: 4px;
+    margin-top: 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
 }
